2001-12-27 (Thomas Huth):
  * Finished the first working version of the GUI. Not yet perfect,
    but many things can now be configured there.
  * Mapped the GUI to the F12 key, quitting the program is now
    ALTGR-Q

2001-12-25 (Thomas Huth):
  * Cleaned up: Fixed many "FIXME"s, rewrote the splitpath and makepath
    functions, and moved the scandir and alphasort functions to file.c.
  * Improved the SDL-GUI.
  * Designed some dialogs and started working on a file selection dialog.

2001-12-21 (Thomas Huth):
  * Hatari now uses the SDL's relative mouse mode instead of absolut mode.
  * Removed the files view.c and statusbar.c (not really needed).

2001-12-10 (Thomas Huth):
  * Wrote a first version of the graphical user interface.
  * The path where Hatari searches its data (TOS-image etc.)
    can now be specified in the Makefile.

2001-10-10 (Thomas Huth):  *** Version 0.11 ***
  * Changed some C++ comments to C comments (for plain ANSI-C compilers).
  * Fixed a stack problem in gemdos.c

2001-09-20 (Thomas Huth):
  * Added screen flipping in fullscreen mode (-> more speed!).
  * ST-Med/ST-Low mixed mode now works (e.g. in the Magnetic
    Scrolls adventures).

2001-09-09 (Sven de Marothy):
  * Added hard-drive emulation, (option -e or --harddrive)
  * Fixed annoying key clicks during boot.

2001-08-16 (Thomas Huth):  *** Version 0.10a ***
  * Improved CPU cycles emulation. Most instructions now return the
    right cycles, I hope.
  * Added Spec512 support.

2001-07-21 (Thomas Huth):
  * Added some shortcuts
  * Added the possibility to switch between fullscreen and window mode.
  * Started working on better CPU cycles emulation (well, they are
    a real mess!).

2001-07-11:
  * Added ST Medium resolution.

2001-07-10:
  * Added Sven's debugger patch.

2001-06-26:
  * Added Sven de Marothy's screenshot patch. It allows taking screenshots
    by pressing ALTGR-G.

2001-06-10 (Thomas Huth):
  * Added sound support. Does not yet work perfect, but at least there