@@ -7,8 +7,6 @@ extern void M68000_MemorySnapShot_Capture(BOOL bSave);
 extern void M68000_Decode_MemorySnapShot_Capture(BOOL bSave);
 extern void M68000_BusError(unsigned long addr);
 extern void M68000_AddressError(unsigned long addr);
-extern void M68000_CheckUserSuperToggle(void);
-extern void M68000_TraceModeTriggered(void);
 extern void M68000_Exception(void);
 extern void M68000_Line_A_OpCode(void);
 extern void M68000_Line_A_Trap(void);
