@@ -1,3 +1,7 @@
+2002-01-02 (Thomas Huth):
+  * Fixed some problems with the CPU reset.
+  * Updated the GUI.
+
 2001-12-27 (Thomas Huth):
   * Finished the first working version of the GUI. Not yet perfect,
     but many things can now be configured there.
